--- a/inventories/sandbox/azure_rm.yml
+++ b/inventories/sandbox/azure_rm.yml
@@ -12,7 +12,7 @@ include_vmss_resource_groups:
 
 conditional_groups:
   #  all_the_hosts: true
-  ops-testing: "'vmopstest' in name"
+  ops_testing: "'vmopstest1' in name"
 
   #hostvar_expressions:
   #  my_host_var:
