--- a/inventories/shared/azure_rm.yml
+++ b/inventories/shared/azure_rm.yml
@@ -5,14 +5,14 @@ plugin: azure_rm
 auth_source: cli
 
 include_vm_resource_groups:
-- RG-BACKOFFICE-NAUTOBOT
+- rg-shared-ca
 
 include_vmss_resource_groups:
 - '*'
 
 conditional_groups:
   #  all_the_hosts: true
-  nautobot_hosts: "'nautobot' in name"
+  shared_hosts: "'vmkosikca' in name"
 
   #hostvar_expressions:
   #  my_host_var:
