--- a/roles/backoffice/nautobot/files/nautobot.conf
+++ b/roles/backoffice/nautobot/files/nautobot.conf
@@ -5,7 +5,7 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
 
     location /static/ {
-        alias /opt/nautobot/static/;
+       alias /opt/nautobot/.nautobot/static/;
     }
 
     location / {
