--- a/roles/backoffice/nautobot/defaults/main.yml
+++ b/roles/backoffice/nautobot/defaults/main.yml
@@ -1,8 +1,8 @@
 ---
-mysql_server_version: 5.7.35-0ubuntu0.18.04.1
-redis_server_version: 5:4.0.9-1ubuntu0.2
+postgresql_server_version: 13+226.pgdg20.04+1
+redis_server_version: 5:5.0.7-2
 nautobot_version: 1.1.0
-nginx_version: 1.14.0-0ubuntu1.9
+nginx_version: 1.18.0-0ubuntu1.2
 
 nautobot_root: /opt/nautobot
 
