--- a/roles/sap/cz/prod/replika/tasks/main.yml
+++ b/roles/sap/cz/prod/replika/tasks/main.yml
@@ -39,12 +39,19 @@
     number: 1
     state: present
 
+- name:
+  parted:
+    device: /dev/disk/azure/scsi1/lun5
+    number: 1
+    state: present
+
 - name: Create a volume group on top of lun0 with physical extent size 4MB
   lvg:
     vg: vg_data
     pvs: 
       - /dev/disk/azure/scsi1/lun0-part1
       - /dev/disk/azure/scsi1/lun1-part1
+      - /dev/disk/azure/scsi1/lun2-part1
     pesize: "4"
 
 - name: Create a volume group on top of lun0 with physical extent size 4MB
