--- a/sites/site_hub.yaml
+++ b/sites/site_hub.yaml
@@ -5,8 +5,8 @@
   roles:
   - ../roles/common
 
-- hosts: shared_hosts
+- hosts: coredns_hosts
   become: yes
   roles:
-  - ../roles/shared/kosikca
+  - ../roles/hub/coredns
 
