--- a/inventories/hub/azure_rm.yml
+++ b/inventories/hub/azure_rm.yml
@@ -5,24 +5,19 @@ plugin: azure_rm
 auth_source: cli
 
 include_vm_resource_groups:
-- rg-sapdev-cz-test-hanadb
-- rg-sapdev-cz-test-dialog
-- rg-sapdev-cz-test-pdf
+- rg-hub-coredns
 
 include_vmss_resource_groups:
 - '*'
 
 conditional_groups:
   #  all_the_hosts: true
-  sap_cz_test_hana_db_hosts: "'vma4t0' in name"
-  sap_cz_test_dialog_hosts: "'vmk4t0' in name"
-  sap_cz_test_pdf_hosts: "'vmkjd0' in name"
+  coredns_hosts: "'vmcoredns0' in name"
 
-
-hostvar_expressions:
+  #hostvar_expressions:
   #  my_host_var:
   #  some_statically_valued_var: ""
-  ansible_host: (public_dns_hostnames + private_ipv4_addresses) | first
+  #  ansible_host: (public_dns_hostnames + public_ipv4_addresses) | first
 
 hostnames:
 - tags.vm_name
