--- a/inventories/sapdev/pred/azure_rm.yml
+++ b/inventories/sapdev/pred/azure_rm.yml
@@ -15,16 +15,16 @@ include_vmss_resource_groups:
 
 conditional_groups:
   #  all_the_hosts: true
-  sap_cz_pred_hana_db_hosts: "'vma4q0' in name"
+  sap_cz_pred_hana_db_hosts: "'vma4q02' in name"
   sap_cz_pred_nfs_hosts: "'vmk4qnfs0' in name"
   sap_cz_pred_dialog_hosts: "'vmk4q0' in name"
   sap_cz_pred_ascs_hosts: "'vmk4qascs0' in name"
 
 
-  #hostvar_expressions:
+hostvar_expressions:
   #  my_host_var:
   #  some_statically_valued_var: ""
-  #  ansible_host: (public_dns_hostnames + public_ipv4_addresses) | first
+  ansible_host: (public_dns_hostnames + private_ipv4_addresses) | first
 
 hostnames:
 - tags.vm_name
