--- a/sites/site_sap_cz_pred.yml
+++ b/sites/site_sap_cz_pred.yml
@@ -20,6 +20,7 @@
   become: yes
   roles:
   - ../roles/sap/cz/pred/dialog
+  - ../roles/monitoring/telegraf
 
 - hosts: sap_cz_pred_ascs_hosts
   become: yes
