--- a/inventories/shared/azure_rm.yml
+++ b/inventories/shared/azure_rm.yml
@@ -6,13 +6,16 @@ auth_source: cli
 
 include_vm_resource_groups:
 - rg-shared-ca
+- rg-shared-prometheus
 
 include_vmss_resource_groups:
 - '*'
 
 conditional_groups:
   #  all_the_hosts: true
-  shared_hosts: "'vmkosikca' in name"
+  shared_kosikca_hosts: "'vmkosikca' in name"
+  shared_prometheus_hosts: "'vmprometheus' in name"
+  shared_promxy_hosts: "'vmpromxy' in name"
 
   #hostvar_expressions:
   #  my_host_var:
