--- a/sites/site_sap_cz_pred.yml
+++ b/sites/site_sap_cz_pred.yml
@@ -4,7 +4,7 @@
   become: yes
   roles:
   - ../roles/common
-    #  - ../roles/monitoring/telegraf
+  - ../roles/monitoring/telegraf
 
 - hosts: sap_cz_pred_hana_db_hosts
   become: yes
