--- a/roles/sap/cz/prod/nfs/tasks/main.yml
+++ b/roles/sap/cz/prod/nfs/tasks/main.yml
@@ -5,6 +5,8 @@
     name: main
 
 - include: ../../../../../common_tasks/users.yml 
+- include: ../../../../../common_tasks/network_settings.yml
+
 
 #-------------
 # LVM + mount
