change dialog inventory

--- a/inventories/sap/prod/azure_rm.yml
+++ b/inventories/sap/prod/azure_rm.yml
@@ -1,4 +1,5 @@
-plugin: azure_rm
+plugin: azure.azcollection.azure_rm
+plain_host_names: true
 
 #plugin: azure.azcollection.azure_rm
 
@@ -30,10 +31,11 @@ conditional_groups:
 hostvar_expressions:
   #  my_host_var:
   #  some_statically_valued_var: ""
-  ansible_host: (public_dns_hostnames + private_ipv4_addresses) | first
+  #  ansible_host: (public_dns_hostnames + private_ipv4_addresses) | first
+  ansible_host: private_ipv4_addresses | first
 
 hostnames:
-- tags.vm_name
+        #- tags.vm_name
 - default  # special var that uses the default hashed name
 
 keyed_groups:
