--- a/roles/sap/cz/prod/nfs/tasks/main.yml
+++ b/roles/sap/cz/prod/nfs/tasks/main.yml
@@ -6,63 +6,4 @@
 
 - include: ../../../../../common_tasks/users.yml 
 - include: ../../../../../common_tasks/network_settings.yml
-
-
-#-------------
-# LVM + mount
-#-------------
-- name: create new prim. partition lun0
-  parted:
-    device: /dev/disk/azure/scsi1/lun0
-    number: 1
-    state: present
-
-- name: create new prim. partition lun1
-  parted:
-    device: /dev/disk/azure/scsi1/lun1
-    number: 1
-    state: present
-
-- name: create new prim. partition lun2
-  parted:
-    device: /dev/disk/azure/scsi1/lun2
-    number: 1
-    state: present
-
-- name: Create a volume group on top of lun0 with physical extent size 4MB
-  lvg:
-    vg: vg_k4p1_nfs
-    pvs: 
-      - /dev/disk/azure/scsi1/lun0-part1
-    pesize: "4"
-
-- name: Create a volume group on top of lun0 with physical extent size 4MB
-  lvg:
-    vg: vg_k4p2_nfs
-    pvs: 
-      - /dev/disk/azure/scsi1/lun1-part1
-      - /dev/disk/azure/scsi1/lun2-part1
-    pesize: "4"
-
-- name: create a logical volume data
-  lvol:
-    vg: vg_k4p1_nfs
-    lv: lv_k4p1_nfs
-    size: 262140M
-
-- name: create a logical volume log
-  lvol:
-    vg: vg_k4p2_nfs
-    lv: lv_k4p2_nfs
-    size: 1048568M
-
-
-    #    #- name: test hash
-    #    #  debug:
-    #    #    msg: "{{ item.name }}"
-    #    #  with_items: "{{ lvm_config['lvg'] }}"
-    #    #
-    #    #- name: test hash
-    #    #  debug:
-    #    #    msg: "{{ item.name }}"
-    #    #  with_items: "{{ lvm_config['lvg'].partitions['name'] }}"
+- include: lvm.yml
