--- a/inventories/shared/azure_rm.yml
+++ b/inventories/shared/azure_rm.yml
@@ -6,7 +6,7 @@ auth_source: cli
 
 include_vm_resource_groups:
 - rg-shared-ca
-- rg-shared-prometheus
+  #- rg-shared-prometheus
 
 include_vmss_resource_groups:
 - '*'
@@ -14,8 +14,8 @@ include_vmss_resource_groups:
 conditional_groups:
   #  all_the_hosts: true
   shared_kosikca_hosts: "'vmkosikca' in name"
-  shared_prometheus_hosts: "'vmprometheus' in name"
-  shared_promxy_hosts: "'vmpromxy' in name"
+  #  shared_prometheus_hosts: "'vmprometheus' in name"
+  #  shared_promxy_hosts: "'vmpromxy' in name"
 
   #hostvar_expressions:
   #  my_host_var:
@@ -23,7 +23,7 @@ conditional_groups:
   #  ansible_host: (public_dns_hostnames + public_ipv4_addresses) | first
 
 hostnames:
-- tags.vm_name
+        #- tags.vm_name
 - default  # special var that uses the default hashed name
 
 keyed_groups:
