--- a/inventories/sapdev/cz/pred/azure_rm.yml
+++ b/inventories/sapdev/cz/pred/azure_rm.yml
@@ -1,6 +1,5 @@
-plugin: azure_rm
-
-#plugin: azure.azcollection.azure_rm
+plugin: azure.azcollection.azure_rm
+plain_host_names: true
 
 auth_source: cli
 
@@ -24,11 +23,7 @@ conditional_groups:
 hostvar_expressions:
   #  my_host_var:
   #  some_statically_valued_var: ""
-  ansible_host: (public_dns_hostnames + private_ipv4_addresses) | first
-
-hostnames:
-- tags.vm_name
-- default  # special var that uses the default hashed name
+  ansible_host: private_ipv4_addresses | first
 
 keyed_groups:
 - prefix: tag
